# atedot

./: CMakeLists.txt  Makefile  README.md
include/: atedot.h  common.h  expr.h
src/: atedot.c  expr.c  main.c  repl.c
src/types/: lines.c
